# monea-cli-v0

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  funding.json  package.json  release-plz.toml
.github/: dependabot.yml
.github/workflows/: release.yml
src/: args.rs  cli.rs  main.rs
src/commands/: mod.rs  run_deploy.rs  templates.rs  version_check.rs
src/utils/: config.rs  mod.rs  template.rs  version.rs
wix/: main.wxs
